; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_animation.c_easing_in_out_bounce.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_animation.c_easing_in_out_bounce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (float, float, float, float)* @easing_in_out_bounce to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @easing_in_out_bounce(float %0, float %1, float %2, float %3) #0 {
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  store float %0, float* %6, align 4
  store float %1, float* %7, align 4
  store float %2, float* %8, align 4
  store float %3, float* %9, align 4
  %10 = load float, float* %6, align 4
  %11 = load float, float* %9, align 4
  %12 = fdiv float %11, 2.000000e+00
  %13 = fcmp olt float %10, %12
  br i1 %13, label %14, label %25

14:                                               ; preds = %4
  %15 = load float, float* %6, align 4
  %16 = fmul float %15, 2.000000e+00
  %17 = load float, float* %8, align 4
  %18 = load float, float* %9, align 4
  %19 = call double @easing_in_bounce(float %16, i32 0, float %17, float %18)
  %20 = fmul double %19, 5.000000e-01
  %21 = load float, float* %7, align 4
  %22 = fpext float %21 to double
  %23 = fadd double %20, %22
  %24 = fptrunc double %23 to float
  store float %24, float* %5, align 4
  br label %42

25:                                               ; preds = %4
  %26 = load float, float* %6, align 4
  %27 = fmul float %26, 2.000000e+00
  %28 = load float, float* %9, align 4
  %29 = fsub float %27, %28
  %30 = load float, float* %8, align 4
  %31 = load float, float* %9, align 4
  %32 = call double @easing_out_bounce(float %29, i32 0, float %30, float %31)
  %33 = fmul double %32, 5.000000e-01
  %34 = load float, float* %8, align 4
  %35 = fpext float %34 to double
  %36 = fmul double %35, 5.000000e-01
  %37 = fadd double %33, %36
  %38 = load float, float* %7, align 4
  %39 = fpext float %38 to double
  %40 = fadd double %37, %39
  %41 = fptrunc double %40 to float
  store float %41, float* %5, align 4
  br label %42

42:                                               ; preds = %25, %14
  %43 = load float, float* %5, align 4
  ret float %43
}

declare dso_local double @easing_in_bounce(float, i32, float, float) #1

declare dso_local double @easing_out_bounce(float, i32, float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
